Extracted query parsing, NOT fixes, query lists

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__/
 .DS_Store
 .env
 HW01/documents/
+HW01/test_documents/
+HW01/query_list.txt
 HW01/saved_index.pkl
 local/
 setup_requirements.bat
