--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ __pycache__/
 .DS_Store
 .env
 HW01/documents/
-HW01/test_documents/
-HW01/query_list.txt
-HW01/saved_index.pkl
-local/
+index.pkl
+index.json
 setup_requirements.bat
