Abstract text processor, optional parallelization

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ kaggle.json
 submissions/
 notes/
 app.log
-HW03_abc/
 performance.log
+HW03/small
+HW03/medium
+HW03/large
+HW03/xlarge
+HW03/mlarge
 
