Experimental VSM, batching, optimization, and more

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,16 @@ HW03/medium
 HW03/large
 HW03/xlarge
 HW03/mlarge
-
+HW03/docs_1000
+HW03/docs_2000
+HW03/docs_2500
+HW03/docs_2625
+HW03/docs_2750
+HW03/docs_3000
+HW03/docs_4000
+HW03/docs_5000
+HW03/docs_6000
+HW03/docs_7000
+HW03/docs_8000
+HW03/docs_9000
+HW03/docs_10000
